--- a/src/Board.css
+++ b/src/Board.css
@@ -10,8 +10,8 @@ html {
 
 img {
 	display: block;
-	max-width: 90%;
-	max-height: 90%;
+	max-width: 95%;
+	max-height: 95%;
 	cursor: pointer;
 	object-fit: contain;
 }
@@ -30,28 +30,28 @@ img {
 }
 
 .gallery {
-	display: flex;
+	display: grid;
+	grid-template-columns: 5% auto 5%;
+	grid-template-rows: auto auto;
 	background: #292929CC;
 	width: 95%;
-	align-self: center;
-	flex-flow: row nowrap;
-	justify-content: center;
+	height: 50%;
 	align-items: center;
+	align-self: center;
 }
 
 .pics {
 	display: grid;
-	width: 90%;
-	align-items: center;
-	justify-items: center;
-	grid-template-columns: 45% 45%;
-	grid-template-rows: 45% 45%;
-	grid-gap: 10px;
+	justify-self: center;
+	width: 99%;
+	grid-column: 2;
+	place-items: center;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .pic {
-	justify-content: center;
-	align-content: center;
+	place-items: center;
+	max-height: 90%;
 }
 
 /*page indicators*/
@@ -69,21 +69,22 @@ img {
 }
 
 #dots {
-	grid-column-start: span 2;
-	display: flex;
-	justify-content: space-between;
+	grid-column: 2;
+	justify-self: center;
+	padding-bottom: 10px;
 }
 
 /*arrows*/
 .arrow {
-	position: static;
+	display: fixed;
 	z-index: 1;
 	cursor: pointer;
 	color: #e6e6e6A0;
 	font-size: 40px;
 	font-weight: bold;
-	padding-left: 15px;
-	padding-right: 15px;
+	justify-content: center;
+	padding-right: 10px;
+	padding-left: 10px;
 }
 
 /*modal stuff*/
@@ -106,7 +107,7 @@ img {
 
 .modalImage {
 	flex-grow: 1;
-	max-width: 85%;
+	max-width: 90%;
 	max-height: 90vh;
 	margin: auto;
 }
