--- a/src/Header.css
+++ b/src/Header.css
@@ -1,3 +1,30 @@
-h1 {
-	background-color: #437c90;
+header {
+	background-color: #8e7c93ee;
+	font-size: 24px;
+	color: #343434;
+	padding: 10px;
+	float: left;
+	position: sticky;
+}
+
+header a {
+	padding: 10px;
+	text-decoration: none;
+	color: #e6e6e6;
+	height: 100%;
+	
+}
+
+header a:hover {
+	opacity: 85%;
+	background-color: #e6e6e6;
+	color: #343434;
+	height: 100%;
+}
+
+#current {
+	opacity: 85%;
+	background-color: #e6e6e6;
+	color: #343434;
+	height: 100%;
 }
