--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 h2 {
 	font-family: 'Montserrat', sans-serif;
-	font-size: 8vw;
+	font-size: 4rem;
 	color: #e6e6e6;
 	opacity: 100%;
 	padding-top: 0.25em;
@@ -14,7 +14,7 @@ h2 {
 p {
 	font-family: 'Roboto', sans-serif;
 	color: #e6e6e6;
-	font-size: 24px;
+	font-size: 1.5rem;
 	text-align: center;
 	text-shadow: 2px 2px 5px #343434;
 	padding: 0.5em 1em;
@@ -23,5 +23,22 @@ p {
 a {
 	color: #1481ba;
 	font-family: 'Roboto', sans-serif;
-	font-size: 24px;
+	font-size: 1.5rem;
+}
+
+footer {
+	font-family: 'Roboto', sans-serif;
+	color: #e6e6e6;
+	font-size: 1em;
+	text-align: center;
+	text-shadow: 2px 2px 5px #343434;
+	padding: 1em 1em;
+	position: relative;
+	bottom: 0px;
+
+}
+
+.index {
+	display: grid;
+	grid-template-rows: auto 1fr auto;
 }
