--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,5 @@
 header {
 	background-color: #8e7c93ee;
-	font-size: 24px;
 	color: #343434;
 	padding: 10px;
 	float: left;
@@ -12,12 +11,18 @@ header a {
 	text-decoration: none;
 	color: #e6e6e6;
 	height: 100%;
+	font-size: 16px;
 }
 
 header a:hover {
 	background-color: #e6e6e6;
 	color: #343434;
 	height: 100%;
+}
+@media only screen and (min-width: 620px) {
+	header a{
+		font-size: 1.5rem;
+	}
 }
 
 #current {
